--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,47 @@
 
+        body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+}
+
+.cover {
+	height: 100vh;
+	background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20201024/pngtree-technology-web-banner-style-background-design-image_433514.jpg");
+	background-size: cover;
+	background-position: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+    opacity:1;
+}
+
+.content {
+	text-align: center;
+	color: #fff;
+}
+
+h1 {
+	font-size: 3rem;
+	margin-bottom: 20px;
+}
+
+p {
+	font-size: 1.5rem;
+	margin-bottom: 40px;
+}
+
+.btn {
+	display: inline-block;
+	padding: 10px 20px;
+	background-color: #333;
+	color: #fff;
+	text-decoration: none;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+	background-color: #555;
+}
+   
